fixing dark mode image scalling

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+
 a {
   font-weight: bold;
   text-decoration-line: underline;
@@ -67,15 +68,17 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-  img{
-     width: 100%;
-
-  }
   p{
-  text-align:left;
+    text-align:left;
   }
   h3{
-  text-align:left;
+    text-align:left;
+  }
+}
+  img{
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    object-fit: cover; /* Ensure scaling fits the container */
   }
 
-}
